<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/register_root_view"
    android:orientation="vertical"
    android:background="@color/light_grey"
    tools:context=".registerevent.RegisterEventActivityView">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="10dp">

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/registro_de_dispositivo"
            android:textSize="18sp"
            android:textColor="@color/purple_500"
            android:gravity="center"
            android:padding="10dp" />

        <ImageView
            android:id="@+id/image"
            android:layout_width="match_parent"
            android:layout_height="110dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:adjustViewBounds="true"
            android:src="@drawable/montanejos"/>

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/main_eventos_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="visible">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardElevation="20dp"
        app:cardCornerRadius="10dp"
        app:cardBackgroundColor="@color/white"
        app:cardMaxElevation="3dp"
        android:layout_margin="8dp"
        app:cardPreventCornerOverlap="true">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:padding="4dp">

            <TextView
                android:id="@+id/seleccion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Selecciona eventos."
                android:textSize="16sp"
                android:layout_marginTop="0dp"
                android:textColor="@color/purple_500"
                android:gravity="center"
                android:padding="10dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnVerEventos"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="60dp"
                android:layout_marginRight="60dp"
                android:layout_marginTop="10dp"
                android:textColor="@color/white"
                android:padding="0dp"
                android:textSize="18sp"
                android:textAllCaps="false"
                android:layout_marginBottom="10dp"
                android:backgroundTint="@color/design_default_color_primary_dark"
                android:text="Eventos"/>

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.cardview.widget.CardView>

    <FrameLayout
        android:id="@+id/custom_view_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/btnVerEventos" />

    <View
        android:layout_width="match_parent"
        android:layout_height="15dp"
        android:background="@color/light_grey"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/add_uuid_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardElevation="20dp"
        app:cardCornerRadius="10dp"
        app:cardBackgroundColor="@color/white"
        app:cardMaxElevation="3dp"
        android:layout_margin="8dp"
        app:cardPreventCornerOverlap="true">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="0dp"
            android:layout_marginBottom="10dp"
            android:padding="4dp">

            <TextView
                android:id="@+id/descripcion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/registerdevice"
                android:textSize="16sp"
                android:layout_marginTop="0dp"
                android:textColor="@color/purple_500"
                android:gravity="center"
                android:padding="20dp" />

            <com.google.android.material.textfield.TextInputLayout
                style="@style/CustomOutlineBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="10dp">

                <com.google.android.material.textfield.TextInputEditText

                    android:id="@+id/editText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:textSize="12sp"
                    android:lines="1"
                    android:hint="@string/insertuuid"
                    android:textColor="@color/blue_dark" />

            </com.google.android.material.textfield.TextInputLayout>

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.cardview.widget.CardView>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/loading_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".3"
        android:layout_gravity="top|center"
        android:gravity="center"
        android:layout_marginTop="0dp">

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminate="true" />
    </androidx.appcompat.widget.LinearLayoutCompat>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnRegisterDevice"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="60dp"
        android:layout_marginRight="60dp"
        android:textColor="@color/white"
        android:padding="0dp"
        android:textSize="18sp"
        android:textAllCaps="false"
        android:layout_marginBottom="20dp"
        android:backgroundTint="@color/design_default_color_primary_dark"
        android:text="Registrar"/>

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/recycler_layout_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="22sp"
            android:text="Selecciona un dispositivo"
            android:textColor="@color/red_900"
            android:gravity="center">

        </TextView>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight=".8"
            android:layout_gravity="center">

            <ProgressBar
                android:id="@+id/device_progressBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:indeterminate="true" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/device_recycler"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:padding="20dp">
            </androidx.recyclerview.widget.RecyclerView>

        </FrameLayout>


        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnDeviceSelectionCancel"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginLeft="60dp"
            android:layout_marginRight="60dp"
            android:textColor="@color/white"
            android:padding="0dp"
            android:textSize="22sp"
            android:textAllCaps="false"
            android:layout_marginBottom="20dp"
            android:backgroundTint="@color/design_default_color_primary_dark"
            android:text="Cancelar"/>

    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.appcompat.widget.LinearLayoutCompat>